--- a/style.css
+++ b/style.css
@@ -128,6 +128,7 @@ body {
 }
 .button{
     margin-top: 30px;
+    padding:15px;
 }
 .button span{
     font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
